--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GlobalDefaultGameMode=/Game/Scripts/GameMode/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -91,4 +92,9 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Shooter.BasePlayerController",NewName="/Script/Shooter.MyPlayerController")
++ClassRedirects=(OldName="/Script/Shooter.AMyCharacter",NewName="/Script/Shooter.MyCharacter")
 
