+ Спринт в мультиплеере + Анимация передвижения вперед

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,4 +97,6 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/Shooter.BasePlayerController",NewName="/Script/Shooter.MyPlayerController")
 +ClassRedirects=(OldName="/Script/Shooter.AMyCharacter",NewName="/Script/Shooter.MyCharacter")
++ClassRedirects=(OldName="/Script/Shooter.MovementModComponentBase",NewName="/Script/Shooter.MovementModComponentBase")
++StructRedirects=(OldName="/Script/Shooter.MovementModTypes",NewName="/Script/Shooter.MovementModifiers")
 
