Доработка поднятия предметов

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,4 +100,5 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/Shooter.MovementModComponentBase",NewName="/Script/Shooter.MovementModComponentBase")
 +StructRedirects=(OldName="/Script/Shooter.MovementModTypes",NewName="/Script/Shooter.MovementModifiers")
 +FunctionRedirects=(OldName="/Script/Shooter.MyCharacter.StartReload",NewName="/Script/Shooter.MyCharacter.Reload")
++PropertyRedirects=(OldName="/Script/Shooter.ShooterHUD.HeathWidget",NewName="/Script/Shooter.ShooterHUD.HealthWidget")
 
