--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,4 +101,5 @@ ManualIPAddress=
 +StructRedirects=(OldName="/Script/Shooter.MovementModTypes",NewName="/Script/Shooter.MovementModifiers")
 +FunctionRedirects=(OldName="/Script/Shooter.MyCharacter.StartReload",NewName="/Script/Shooter.MyCharacter.Reload")
 +PropertyRedirects=(OldName="/Script/Shooter.ShooterHUD.HeathWidget",NewName="/Script/Shooter.ShooterHUD.HealthWidget")
++ClassRedirects=(OldName="/Script/Shooter.HealthPickup",NewName="/Script/Shooter.PickUpObject")
 
