+ Добавлен инвентарь с UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Untitled.Untitled
 GlobalDefaultGameMode=/Game/Scripts/GameMode/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Scripts/GameMode/BP_MyGameInstance.BP_MyGameInstance_C
+EditorStartupMap=/Game/Untitled.Untitled
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
