--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,4 +104,6 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Shooter.MyCharacter.StartReload",NewName="/Script/Shooter.MyCharacter.Reload")
 +PropertyRedirects=(OldName="/Script/Shooter.ShooterHUD.HeathWidget",NewName="/Script/Shooter.ShooterHUD.HealthWidget")
 +ClassRedirects=(OldName="/Script/Shooter.HealthPickup",NewName="/Script/Shooter.PickUpObject")
++PropertyRedirects=(OldName="/Script/Shooter.InventoryWidget.InventoryComponent",NewName="/Script/Shooter.InventoryWidget.Inventory")
++StructRedirects=(OldName="/Script/Shooter.InventorySlot",NewName="/Script/Shooter.InventorySlot")
 
